# latebra

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.es.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  install.ps1  install.sh  pyproject.toml
.opencode/: config.json
.review/: 1-security.md  2-quality.md  3-architecture.md  4-performance.md  5-tests.md
.vibe/: bugs-found-testing-20260531.md  development-plan-feature-development-20260531.md  development-plan-feature-implement-all-layers.md
docs/: LATEBRA_REPORT.md  PERFORMANCE_BASELINE.md  SDD.md
docs/superpowers/plans/: 2026-06-01-logging-system.md  2026-06-02-search-backend-plan.md
docs/superpowers/specs/: 2026-06-02-search-backend-design.md
src/latebra/: __init__.py  __main__.py  config.py  constants.py  install.py  log_utils.py  pipeline.py  server.py  validation.py
src/latebra/captcha/: __init__.py  solver.py
src/latebra/layers/: __init__.py  browser.py  crawler.py  extraction.py  interact.py  request.py  search.py  search_builtin.py
src/latebra/proxy/: __init__.py  manager.py
src/latebra/stealth/: __init__.py  behavior.py  fingerprint.py
tests/: conftest.py  test_captcha_solver.py  test_config.py  test_constants.py  test_layers_browser.py  test_layers_extraction.py  test_layers_request.py  test_layers_search.py  test_log_utils.py  test_p0_features.py  test_pipeline.py  test_proxy_manager.py  test_search_builtin.py  test_server.py  test_stealth_behavior.py  test_stealth_fingerprint.py  test_validation.py
tests/performance/: conftest.py  results.jsonl  test_anonymity_efficacy.py  test_batch_optimizations.py  test_browser_bootstrap.py  test_cache_wal.py  test_compiled_regex.py  test_final_batch.py  test_mcp_throughput.py  test_memory_stability.py  test_p0_performance.py  test_scrape_latency.py  test_stealth_script.py  test_warm_pool.py
