[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latebra"
version = "0.1.0"
description = "MCP server for anti-bot web scraping with maximum anonymity"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "curl-cffi>=0.7.0",
    "camoufox>=0.5.0",
    "crawl4ai>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
patchright = ["patchright>=0.1.0"]
all = ["latebra[dev,patchright]"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
