[project]
name = "latebra"
version = "0.2.0"
description = "Latebra - Multi-layer anti-bot evasion MCP server"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.7.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
browser = [
    "patchright>=1.0.0",
    "camoufox>=0.2.0",
    "nodriver>=0.38.0",
]
extraction = [
    "crawl4ai>=0.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
all = [
    "latebra[browser]",
    "latebra[extraction]",
    "latebra[dev]",
]
captcha = [
    "httpx>=0.27.0",
]

[project.urls]
homepage = "https://github.com/evandrofjs/latebra"
repository = "https://github.com/evandrofjs/latebra"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
